add story generation

--- a/packages/shared/prompts/story_generation/levels/a2.md
+++ b/packages/shared/prompts/story_generation/levels/a2.md
@@ -20,7 +20,7 @@ A2 learners can:
 
 | Parameter | A2 Value |
 |-----------|----------|
-| Story length | 45–75 seconds |
+| Story length | 90–120 seconds (2 min) |
 | Cast | 1 (monologue only) |
 | Entity count | 1–3 |
 | Time shifts | 0 |
