--- a/packages/shared/prompts/story_generation/levels/b1.md
+++ b/packages/shared/prompts/story_generation/levels/b1.md
@@ -20,7 +20,7 @@ B1 learners can:
 
 | Parameter | B1 Value |
 |-----------|----------|
-| Story length | 75–120 seconds |
+| Story length | 150–180 seconds (3 min) |
 | Cast | 1–2 (prefer monologue) |
 | Entity count | 2–4 |
 | Time shifts | 0–1 (clearly signposted) |
