--- a/packages/shared/prompts/story_generation/levels/b2.md
+++ b/packages/shared/prompts/story_generation/levels/b2.md
@@ -20,7 +20,7 @@ B2 learners can:
 
 | Parameter | B2 Value |
 |-----------|----------|
-| Story length | 120–180 seconds |
+| Story length | 210–240 seconds (4 min) |
 | Cast | 1–2 (dialogue recommended) |
 | Entity count | 3–6 |
 | Time shifts | 0–2 |
