--- a/packages/shared/prompts/story_generation/levels/c1.md
+++ b/packages/shared/prompts/story_generation/levels/c1.md
@@ -21,7 +21,7 @@ C1 learners can:
 
 | Parameter | C1 Value |
 |-----------|----------|
-| Story length | 180–260 seconds |
+| Story length | 270–300 seconds (5 min) |
 | Cast | 1–2 (dialogue recommended) |
 | Entity count | 4–8 |
 | Time shifts | 1–2 |
