--- a/packages/shared/prompts/qa/levels/a2.md
+++ b/packages/shared/prompts/qa/levels/a2.md
@@ -91,3 +91,9 @@ Keep models at A2 level:
 ✗ "He proceeded to the store."
 ✗ "She was desirous of coffee."
 ```
+
+---
+
+## Language
+
+Conduct the session in the language of the story. If the learner is struggling — unable to answer after two attempts or clearly confused — you may briefly explain a concept in the learner's native language to unblock them, then switch back to the story's language.
