--- a/packages/shared/prompts/qa/levels/b1.md
+++ b/packages/shared/prompts/qa/levels/b1.md
@@ -94,3 +94,9 @@ Occasionally introduce a new word with immediate explanation:
 - Accept any reasonable response
 - Don't evaluate personal opinions
 - Affirm their reasoning
+
+---
+
+## Language
+
+Conduct the session in the language of the story. If the learner is struggling — unable to answer after two attempts or clearly confused — you may briefly explain a concept in the learner's native language to unblock them, then switch back to the story's language.
