--- a/packages/shared/prompts/qa/levels/b2.md
+++ b/packages/shared/prompts/qa/levels/b2.md
@@ -93,3 +93,9 @@ Model at B2+ level:
 ✓ "She implied that the proposal might need some adjustments."
 ✓ "They reached a compromise, although neither was fully satisfied."
 ```
+
+---
+
+## Language
+
+Conduct the entire session in the language of the story. Do not switch to the learner's native language unless they explicitly ask you to. If they do, keep the explanation brief and switch back immediately.
