--- a/packages/shared/prompts/qa/levels/c1.md
+++ b/packages/shared/prompts/qa/levels/c1.md
@@ -123,3 +123,9 @@ At C1, users should demonstrate:
 "Good instinct to soften it. But if you needed to be more assertive, 
 you could say: 'I think we need to reconsider this.'"
 ```
+
+---
+
+## Language
+
+Conduct the entire session in the language of the story. Do not switch to the learner's native language unless they explicitly ask you to. If they do, keep the explanation brief and switch back immediately.
